# De-novo-binding-sites-detection-utilizing-deep-neural-networks

./: .gitignore  CMakeLists.txt  README.md  netw_akriti.py
De novo sites detection/: AdversarialAutoencoderMnist.py  mds.py  readme.txt  summation.py  test.R
De novo sites detection/Autoencoder/: autoencoder.py  autoencoderMnist.py  autoencoderOld.py
De novo sites detection/Convolutional Neural Network/: cnn.py  cnnBackup.py  cnnImages.best.hdf5  lstm_mod2.best.hdf5  netw_akriti.py
De novo sites detection/Results/Autoencoder/2018-03-04 12:23:10.799849_2_0.001_100_1000_0.9_autoencoder/log/: log.txt
De novo sites detection/cnn/: cnn.best.hdf5  cnn.py  cnnBackup.py  cnnImages.best.hdf5  dna_TCCCACAAAC_2000_100.fa  lstm_mod2.best.hdf5  netw_akriti.py  seeds0s.txt  seedsAbove285.txt  seedsOutput.txt  seedsOutput1Row.txt  statsOutputDim15.txt  statsOutputDim15Epochs40.txt  statsOutputDim3.txt  statsOutputDim63Epochs20.txt  test.txt
De novo sites detection/cnn/progress/: cnnImages.best.hdf5
De novo sites detection/cnn/progressSeed91Dim3/: cnnImages.best.hdf5
De novo sites detection/data/: dna_['CAGTCATTCC']_1000_100_1_nch_0.fa  dna_['GAACTACTTA']_100_100_1_nch_0.fa  dna_['GTCCTGTTTT']_500_100_1_nch_0.fa  dna_['TCATCACAGT']_300_100_1_nch_0.fa
De novo sites detection/models/: autoencoder(3.3#23)(42).h5  autoencoder(4.6#34)(42).h5  autoencoder(5.4#36)(42).h5  autoencoder(5.9#39)(42).h5  autoencoder(6.2#40)(42).h5  cae(5.2#34)(42).h5  cae(8.6#48)(42).h5  cae(9.9#34)(42)  cae(9.9#40)(42).h5  cae(9.9#42)(42).h5
autoencoder/: autoencoder.py  simpleAutoencoder.py
(+6 files in other folders)
